--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "lodash": "^4.17.15",
     "method-override": "^3.0.0",
     "mongoose": "^5.9.16",
+    "mongoose-paginate": "^5.0.3",
+    "mongoose-paginate-v2": "^1.3.9",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.1.0",
     "passport": "^0.4.1",
