Modified gitIgnore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,28 @@
+Skip to content
+Search or jump to…
+
+Pull requests
+Issues
+Marketplace
+Explore
+ 
+@massive5566 
+github
+/
+gitignore
+3.1k
+104k54.8k
+ Code
+ Pull requests 147 Actions
+ Projects 0
+ Security 0
+ Insights
+gitignore/Node.gitignore
+@ch4ot1c ch4ot1c Add .yarn/install-state.gz to Node.gitignore (#3407)
+7293c14 on 14 May
+@stuartpb@shiftkey@SimonSiefke@TennyZhuang@venatoria@ro31337@Richienb@melonmanchan@gouthamve@jucrouzet@cheddar@arcresu@xamgore@tkesgar@kesoji@tejashah88@sroberts@segayuu@ChiefORZ@MCSH@rgbkrk@rsolomo@peat@noinkling@ndelvalle@MikeRalphson
+116 lines (86 sloc)  1.77 KB
+.DS_Store
 # Logs
 logs
 *.log
@@ -24,7 +49,6 @@ coverage
 
 # nyc test coverage
 .nyc_output
-.DS_Store
 
 # Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
@@ -115,3 +139,15 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+© 2020 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Help
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
