--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "Massive Tech",
   "license": "ISC",
+  "engines": {
+    "node": "12.16.3"
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
